# bolt

./: .gitignore  Cargo.toml  LICENSE  README.md  YOUTUBE_DOWNLOAD_FINDINGS.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
bolt-nmh/: Cargo.toml  com.bolt.nmh.json.template  install.sh
bolt-nmh/src/: main.rs
extension/: PRIVACY_POLICY.md  STORE_LISTING.md  background.js  content.css  content.js  manifest.json  popup.html  popup.js
src/: app.rs  autostart.rs  ipc.rs  lib.rs  main.rs  message.rs  model.rs  nmh.rs  settings.rs  theme.rs  tray.rs  view.rs
src/download/: engine.rs  hls.rs  mod.rs  worker.rs
src/utils/: format.rs
tests/: hls_integration.rs
website/: index.html  package.json  pnpm-lock.yaml
website/public/: robots.txt  sitemap.xml
website/src/: App.tsx  index.css
website/src/components/: BoltLogo.tsx  Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx
website/src/hooks/: useSEO.ts
website/src/pages/: DocsPage.tsx  Home.tsx  PrivacyPage.tsx
