[workspace]
members = [".", "bolt-nmh"]

[workspace.package]
version = "0.3.0-beta"

[package]
name = "bolt"
version.workspace = true
edition = "2021"
description = "Bolt - Fast multi-segment download manager for Linux"
authors = ["Dasun P"]
license = "MIT"

[dependencies]
# GUI Framework
iced = { version = "0.14", features = ["svg", "tokio", "wayland", "x11"] }
iced_fonts = { version = "0.3", default-features = false, features = ["bootstrap"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client with streaming support
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls", "json", "socks"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Settings storage
directories = "5.0"

# File dialog
rfd = "0.14"

# URL parsing
url = "2"

# Image for app icon
image = { version = "0.25", default-features = false, features = ["png"] }

# System tray
tray-icon = "0.21"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
